--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-free-brands": "^5.0.6",
     "@fortawesome/fontawesome-free-solid": "^5.0.6",
     "@fortawesome/react-fontawesome": "0.0.17",
+    "axios": "^0.17.1",
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-elements": "^0.19.0",
